--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "doc": "jsdoc2md --heading-depth 1 --src src/**.js > API.md",
     "lint": "eslint . --ignore-path .gitignore",
-    "unittest": "mocha --check-leaks --require ./alias --recursive test",
-    "unitcov": "istanbul cover -x 'examples/**' --include-all-sources --report lcovonly -- _mocha --reporter spec --check-leaks --require ./alias --recursive test",
+    "unittest": "mocha --opts ./.mocha.opts",
+    "unitcov": "istanbul cover -- _mocha --opts ./.mocha.opts",
+    "postunitcov": "istanbul check-coverage",
     "pretest": "npm run lint",
     "test": "npm run unitcov",
-    "posttest": "cat coverage/lcov.info | coveralls"
+    "posttest": "cat coverage/lcov.info | coveralls || true"
   },
   "repository": {
     "type": "git",
