--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
 		"posttest":    "cat coverage/lcov.info | coveralls || true"
 	},
 
+	"dependencies": {
+		"is-plain-obj": "1.1.0",
+		"ramda":        "0.23.0"
+	},
+
 	"devDependencies": {
 		"coveralls":         "2.11.15",
 		"eslint":            "3.15.0",
