--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 	},
 
 	"scripts": {
-		"doc":         "jsdoc2md --heading-depth 1 --files src/**.js > API.md",
+		"predoc":      "./generate-jsdoc-config.sh src > .jsdoc2md.json",
+		"doc":         "jsdoc2md > API.md",
 		"lint":        "eslint . --ignore-path .gitignore",
 		"unittest":    "mocha --opts ./.mocha.opts",
 		"unitcov":     "istanbul cover -- _mocha --opts ./.mocha.opts",
